nginx, transaction recording in frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea
 ethdapp/node_modules
-middleware/node_modules
+middleware/express/node_modules
 geth/gethdata/*/geth.ipc
 geth/gethdata/*/geth
