--- a/ethdapp/package.json
+++ b/ethdapp/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
     "bootstrap": "^5.0.1",
+    "chart.js": "^2.9.4",
     "ethers": "^5.3.0",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
