--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./geth/gethdata/geth1:/geth
     entrypoint: /startup.sh
-    command: "--port 30303 --http.port 8545 "
+    command: "--port 30303 --http.port 8545 --ws.port 8645"
 
   geth2:
     container_name: geth2
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./geth/gethdata/geth2:/geth
     entrypoint: /startup.sh
-    command: "--port 30304 --http.port 8546"
+    command: "--port 30304 --http.port 8546 --ws.port 8646"
 
   geth3:
     container_name: geth3
@@ -56,14 +56,4 @@ services:
     volumes:
       - ./geth/gethdata/geth3:/geth
     entrypoint: /startup.sh
-    command: "--port 30305 --http.port 8547"
-
-  #  bootnode:
-  #    container_name: bootnode
-  #    image: ethereum/client-go:alltools-latest
-  #    ports:
-  #      - "30301:30301/tcp"
-  #    volumes:
-  #      - ./geth/gethdata/bootnode:/key
-  #    entrypoint: bootnode
-  #    command: '-nodekey /key/boot.key -addr "bootnode:30301" -verbosity 3'
+    command: "--port 30305 --http.port 8547 --ws.port 8647"
