--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,23 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8545:8545"
+      - "8546:8546"
     environment:
       - TZ=Europe/Berlin
     volumes:
       - ./geth/node:/geth
+
+  approach1:
+    container_name: approach1
+    build:
+      context: ./approach1
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - TZ=Europe/Berlin
+      - PORT=8080
+      - PRIVATE_KEY=bcc6d4aa1e277f085b3e11f2c1e6f14dd04e8108c823898e06fa5287c2bf1a92
+      - NODE_URL=ws://geth:8546
+      - CONTRACT_ADDRESS=0x17cB057648a03dE335c773C7F6b7719c63A32eB7
+      - TX_DELAY=1000
