--- a/approach1/tx-creation/pom.xml
+++ b/approach1/tx-creation/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.6</version>
+		<version>2.6.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>approach2</groupId>
-	<artifactId>approach2</artifactId>
+	<groupId>approach1.tx-creation</groupId>
+	<artifactId>tx-creation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>approach2</name>
-	<description>One Account per Machine</description>
+	<name>tx-creation</name>
+	<description>Singleton Creator</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -22,6 +22,11 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
