--- a/approach1/tx-requests/pom.xml
+++ b/approach1/tx-requests/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>approach2</groupId>
-	<artifactId>approach2</artifactId>
+	<groupId>approach1.tx-requesting</groupId>
+	<artifactId>tx-requesting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>approach2</name>
-	<description>One Account per Machine</description>
+	<name>tx-requesting</name>
+	<description>Singleton Creator</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -36,11 +36,6 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.web3j</groupId>
-			<artifactId>core</artifactId>
-			<version>5.0.0</version>
 		</dependency>
 	</dependencies>
 
