--- a/approach1/tx-requests/src/main/resources/application.properties
+++ b/approach1/tx-requests/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=${PORT:8090}
 
-eth.txCreationMachineUrl=${TX_CREATION_MACHINE_URL:http://localhost:8080}
-eth.requestInterval=${REQUEST_INTERVAL:250}
+app.txCreationMachineUrl=${TX_CREATION_MACHINE_URL:http://localhost:8080}
+app.machineId=${MACHINE_ID:1}
