--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,11 +1,12 @@
 FROM ethereum/client-go:alltools-release-1.10
 
 COPY docker-container-files/* /
+COPY truffle /truffle
 
-#RUN mv /startup.sh /usr/local/bin/startup.sh
-#RUN chmod a+x /usr/local/bin/startup.sh
 RUN chmod a+x /startup.sh
 
+RUN apk add --update --no-cache npm python3 make gcc libc-dev g++
+RUN npm install -g truffle
+
 ENTRYPOINT sh startup.sh
-#ENTRYPOINT /startup.sh
 CMD "--port 30303 --http.port 8545 --ws.port 8645"
