--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ seminar/geth/gethdata/*/geth
 
 geth/node/geth/
 geth/node/geth.ipc
-truffle/build/
+geth/truffle/build/
 approach*/target/
 performance-test/target/
 performance-test/performance-test.iml
