--- a/docker-compose.approach4.yml
+++ b/docker-compose.approach4.yml
@@ -1,6 +1,21 @@
 version: "3.8"
 services:
 
+  frontend:
+    image: 127.0.0.1:5000/angular-ui:approach4
+    build:
+      context: ./angular-ui
+      dockerfile: Dockerfile
+    ports:
+      - "4200:4200"
+    environment:
+      - TZ=Europe/Berlin
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - "node.role==manager"
+
   geth:
     image: 127.0.0.1:5000/geth-node:approach4
     build:
@@ -16,10 +31,10 @@ services:
       placement:
         constraints:
           - "node.role==manager"
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1g
+      #resources:
+      #  limits:
+      #    cpus: '1'
+      #    memory: 1g
     volumes:
       - ./geth/node:/geth
 
@@ -35,10 +50,10 @@ services:
       placement:
         constraints:
           - "node.role==manager"
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1g
+      #resources:
+      #  limits:
+      #    cpus: '1'
+      #    memory: 1g
     environment:
       - TZ=Europe/Berlin
 
