--- a/docker-compose.approach4.yml
+++ b/docker-compose.approach4.yml
@@ -64,8 +64,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - target: 8080
-        published: 8080
-        # mode: host
+        # published: 8080
+        mode: host
     environment:
       - TZ=Europe/Berlin
       - PORT=8080
@@ -84,5 +84,4 @@ services:
           - "node.labels.txcreation==yes"
       resources:
         limits:
-          cpus: '0.50'
-          memory: 1g
+          cpus: '0.25'
