--- a/docker-compose.approach1.yml
+++ b/docker-compose.approach1.yml
@@ -60,7 +60,7 @@ services:
       - TZ=Europe/Berlin
       - PORT=8080
       - PRIVATE_KEY=bcc6d4aa1e277f085b3e11f2c1e6f14dd04e8108c823898e06fa5287c2bf1a92
-      - NODE_URL=ws://geth:8546
+      - NODE_URL=http://geth:8545
       - CONTRACT_ADDRESS=0x17cB057648a03dE335c773C7F6b7719c63A32eB7
 
   tx-requesting:
@@ -80,7 +80,9 @@ services:
           - "node.labels.txcreation==yes"
       resources:
         limits:
-          cpus: '0.2'
+          cpus: '0.05'
+        reservations:
+          cpus: '0.05'
     environment:
       - TZ=Europe/Berlin
       - PORT=8090
