--- a/approach4/tx-creation/pom.xml
+++ b/approach4/tx-creation/pom.xml
@@ -52,6 +52,16 @@
         </dependency>
 	</dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.9.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 	<build>
         <finalName>${project.artifactId}</finalName>
 		<plugins>
